--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'About Us') %>
-<h1>Acerca de nosotros</h1>
+<% provide(:title, 'Sobre nosotros') %>
+<h1>Sobre nosotros</h1>
 <p>
   Algo sobre nosotros
 </p>
