corregi error q me mande con el device

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,8 +6,11 @@
         <ul class="nav pull-right">
           <li><%= link_to "Home",  root_path %></li>
           <li><%= link_to "Ayuda", help_path %></li>
-          
-          <li> <%= link_to "Ingresar", "#" %> </li>
+          <% if user_signed_in? %>
+            <li> <%= link_to "salir" , destroy_user_session_path, :method=>'delete' %> </li>
+          <% else %>
+            <li> <%= link_to "Ingresar", new_user_session_path %> </li>
+          <% end %>
         </ul>
       </nav>
     </div>
