--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,18 @@
           <li><%= link_to "Home",  root_path %></li>
           <li><%= link_to "Ayuda", help_path %></li>
           <% if user_signed_in? %>
-            <li> <%= link_to "salir" , destroy_user_session_path, :method=>'delete' %> </li>
+            <li id="fat-menu" class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                 <%= current_user.name %>
+              <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li> <%= link_to "Profile", '#' %>      </li>
+	        <li> <%= link_to "Settings", '#' %>   </li>
+                <li class="divider"></li>
+                <li> <%= link_to "Salir" , destroy_user_session_path, :method=>'delete' %> </li>
+	      </ul>
+            </li>
           <% else %>
             <li> <%= link_to "Ingresar", new_user_session_path %> </li>
           <% end %>
