--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
               <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li> <%= link_to "Profile", '#' %>      </li>
+                <li> <%= link_to "Profile", user_path(current_user.id) %>      </li>
 	        <li> <%= link_to "Settings", '#' %>   </li>
                 <li class="divider"></li>
                 <li> <%= link_to "Salir" , destroy_user_session_path, :method=>'delete' %> </li>
