--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,12 +9,13 @@
           <% if user_signed_in? %>
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                 <%= current_user.name %>
+		 <%= image_tag current_user.gravatar_url(:size => 20) %>
+                 <%= current_user.name.capitalize %>
               <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li> <%= link_to "Profile", user_path(current_user) %>      </li>
-	        <li> <%= link_to "Settings", '#' %>   </li>
+                <li> <%= link_to "Perfil", user_path(current_user) %>      </li>
+	        <li> <%= link_to "Configuracion", '#' %>   </li>
                 <li class="divider"></li>
                 <li> <%= link_to "Salir" , destroy_user_session_path, :method=>'delete' %> </li>
 	      </ul>
