Modifique perfil usuario y refactorice header home

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,5 +2,6 @@
   <h1>Bienvenido a Omega</h1>
 
   <h2>Donde la travecia apenas empiesa</h2>
-  <%= link_to "Entra en la aventura ya!", new_user_registration_path , class: "btn btn-large btn-primary" %>
+  <%= link_to "Entra en la aventura ya!", new_user_registration_path , 
+              class: "btn btn-large btn-primary" %>
 </div>
