--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,7 @@
     <li>
       <%= gravatar_for user, size: 52 %>
       <%= link_to user.name, user %>
+      <%= link_to user.lastname, user%>
     </li>
   <% end %>
 </ul>
