--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -120,8 +120,9 @@ aside {
       font-size: 1.4em;
       text-align: left;
       letter-spacing: -1px;
-      margin-bottom: 3px;
+      margin-bottom: 10px;
       margin-top: 0px;
+      margin-left: 110px;
     }
   }
 }
