--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,16 +9,18 @@
           <% if user_signed_in? %>
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-		 <%= image_tag current_user.gravatar_url(:size => 40) %>
-                 <%= current_user.name.capitalize %>
+		          <%= image_tag current_user.gravatar_url(:size => 40) %>
+              <%= current_user.name.capitalize %>
               <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li> <%= link_to "Perfil", user_path(current_user) %> </li>
-	        <li> <%= link_to "Configuracion", '#' %>   </li>
+                <li> <%= link_to "Perfil", user_path(current_user) %> 
+                </li>
+	              <li> <%= link_to "Configuracion", '#' %>   </li>
                 <li class="divider"></li>
-                <li><%= link_to "Salir" , destroy_user_session_path, :method=>'delete' %> </li>
-	      </ul>
+                <li><%= link_to "Salir" , destroy_user_session_path, 
+                        :method=>'delete' %> </li>
+	              </ul>
             </li>
           <% else %>
             <li> <%= link_to "Ingresar", new_user_session_path %> </li>
